--- a/roles/homebrew/vars/main.yml
+++ b/roles/homebrew/vars/main.yml
@@ -13,6 +13,7 @@ homebrew_packages:
   - name: neovim
   - name: node
   - name: nvm
+  - name: yarn
     handler: Setup nvm
   - name: golang
     handler: Setup gvm
